@@ -1,0 +1,7 @@
+import React from 'react';
+import IconWithShell from '../styles/icon-with-shell';
+import icon from './icon.svg';
+
+const AffirmIcon = ( props ) => <IconWithShell { ...props } src={ icon } />;
+
+export default AffirmIcon;
