@@ -10,6 +10,7 @@ export const PAYMENT_METHOD_NAME_OXXO = 'stripe_oxxo';
 export const PAYMENT_METHOD_NAME_BANCONTACT = 'stripe_bancontact';
 export const PAYMENT_METHOD_NAME_ALIPAY = 'stripe_alipay';
 export const PAYMENT_METHOD_NAME_KLARNA = 'stripe_klarna';
+export const PAYMENT_METHOD_NAME_AFFIRM = 'stripe_affirm';
 
 export function getPaymentMethodsConstants() {
 	return {
@@ -25,6 +26,7 @@ export function getPaymentMethodsConstants() {
 		bancontact: PAYMENT_METHOD_NAME_BANCONTACT,
 		alipay: PAYMENT_METHOD_NAME_ALIPAY,
 		klarna: PAYMENT_METHOD_NAME_KLARNA,
+		affirm: PAYMENT_METHOD_NAME_AFFIRM,
 	};
 }
 
