@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 8.3.0 - xxxx-xx-xx =
+* Add - Include Affirm as a payment method for stores using the updated checkout experience.
 * Tweak - Credit card brand selection disabled when the "Legacy checkout experience" is enabled.
 * Add - Add Klarna to the available payment methods.
 * Tweak - Adds the tracking of a selected card brand when paying using co-branded credit cards.
